Introduces "AI reasoning" output: separate streaming, UI display, history exclusion (#674)
* feat: Add AI reasoning bubble and transient behavior

* chore: update MOP build chunks

* refactor: Add transient reasoning (exclude it from history)

* chore: update MOP build chunks

* refactor: fix formatting (spotlessCheck)